--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Installation
-        run: bash -c "$(curl -sL https://raw.githubusercontent.com/userdiwash/Ubuntu_RDP/main/Ubuntu_RDP.sh)"
+        run: sudo bash -c "$(curl -sL https://raw.githubusercontent.com/userdiwash/Ubuntu_RDP/main/Ubuntu_RDP.sh)"
